include i18n helper (begin feature testing)

--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -26,7 +26,7 @@ ua:
         full_name: "Прізвище Ім'я Побатькові"
         email: "Емейл"
         password: "Пароль"
-        password_confirmation: "Пароль"
+        password_confirmation: "Підтвердження паролю"
         current_password: "Поточний пароль"
         categgory_id: "Клас"
         subject_id: "Предмет"
